--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,13 +26,21 @@ winapi = { version = "0.3.9", features = ["winuser", "commdlg", "shobjidl", "sho
 scopeguard = "1.1.0"
 lazy_static = "1.4.0"
 log = "0.4.14"
-simplelog = "0.10.0"
+simplelog = "0.12.1"
 chrono = "0.4.19"
 regex = "1.4.5"
-indoc = "1.0.3"
+indoc = "2.0.1"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
 
 [build-dependencies]
 vergen = "7.1.0"
+embed-manifest = "1.3.1"
+
+[dependencies.windows]
+version = "0.44.0"
+features = [
+    "Win32_Foundation",
+    "Win32_UI_Controls"
+]
